# advent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: README.md
2017/day1/: Cargo.toml
2017/day2/: main.kts
2019/cpu/: Cargo.toml
2019/day1/: Cargo.toml
2019/day10/: Cargo.toml
2019/day2/: Cargo.toml
2019/day3/: Cargo.toml
2019/day4/: Cargo.toml
2019/day5/: Cargo.toml
2019/day6/: Cargo.toml
2019/day7/: Cargo.toml
2019/day8/: Cargo.toml
2019/day9/: Cargo.toml
2020/: day1.py  day10.py  day11.py  day12.py  day12.txt  day13-light.txt  day13.py  day13.z3  day14.py  day15.py  day16.py  day17.py  day18.py  day18.txt  day19-a.txt  day19.py  day19.txt  day2.py  day20.py  day22.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7.txt  day8.py  day8.txt  day9.py
2021/day1/: Cargo.toml
2021/day2/: Cargo.toml
2021/day3/: Cargo.toml
2021/day4/: Cargo.toml
2021/day5/: Cargo.toml
2021/day6/: Cargo.toml
2021/day7/: Cargo.toml
2021/day8/: Cargo.toml
2021/day9/: Cargo.toml
2022/: day7.py
2022/day1/: Cargo.toml
2022/day10/: Cargo.toml
2022/day11/: Cargo.toml
2022/day12/: Cargo.toml
2023/: day1.kts  day10.kts  day11.kts  day12.kts  day13.kts  day14.main.kts  day15.main.kts  day16.main.kts  day2.kts  day3.kts  day4.kts  day5.kts  day6.kts  day7.kts  day8.kts  day9.kts  main.kts
2025/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
day1/: Cargo.toml
day10/: Cargo.toml
day4/: Cargo.toml
day8/: Cargo.toml
src/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs
(+62 files in other folders)
