[workspace]
members = [
    "2019/day1",
    "2019/day2",
    "2019/day3",
    "2019/day4",
    "2019/day5",
    "2019/day6",
    "2019/day7",
    "2019/day8",
    "2019/day9",
    #"2019/day10",
    "2021/day1",
    "2021/day2",
    "2021/day3",
    #
    "2022/day1",
    "2022/day2",
    "2022/day3",
    "2022/day4",
    "2022/day5",
    "2022/day6",
    #"2022/day7",
    "2022/day8",
    "2022/day9",
    "2022/day10",
    "2022/day11",
]